...
    <string name="settings_tab_general_name">General</string>
    <string name="settings_tab_gestures_name">Gestures</string>
    <string name="settings_tab_debug_name" translatable="false">Debug</string>
    <string name="default_page_background_template">Default paper</string>
    <string name="default_page_size">Default page size</string>
    <string name="blank_page">Blank page</string>
    <string name="dot_grid">Dot grid</string>
    <string name="lines">Lines</string>
    <string name="small_squares_grid">Small squares grid</string>
    <string name="hexagon_grid">Hexagon grid</string>
    <string name="enable_scribble_to_erase">Enable scribble-to-erase (scribble out your mistakes to erase them)</string>
    <string name="enable_smooth_scrolling">Enable smooth scrolling</string>
    <string name="vertical_navigation">Page navigation</string>
    <string name="vertical_navigation_continuous">Continuous scrolling</string>
...
    <string name="name_prompt_folder_title">Folder name</string>
    <string name="name_prompt_notebook_title">Notebook name</string>
    <string name="name_prompt_page_title">Page name</string>
    <string name="new_notebook_title">New notebook</string>
    <string name="new_notebook_page_size">Page size</string>
    <string name="new_notebook_template">Template</string>
    <string name="new_notebook_create">Create</string>
    <string name="rename">Rename</string>
    <string name="page_untitled">Untitled</string>
    <string name="paginate_pdf">Paginate PDF</string>
    <string name="app_new_version">It seems a new version of Notable is available on GitHub!</string>
    <string name="app_see_release">See release in browser</string>
    <string name="app_latest_version">You are on the latest version.</string>
...
    <string name="export_book_to">Export book to %1$s</string>
    <string name="exporting_the_book_to">Exporting the book to %1$s…</string>
    <string name="clean_all_strokes">Clean all strokes</string>
    <string name="cleared_all_strokes">Cleared all strokes</string>
    <string name="change_background">Change Background</string>
    <string name="bug_report">Bug Report</string>
    <string name="template_placement_label">Add to</string>
    <string name="template_placement_this_page">This page</string>
    <string name="template_placement_before">New page before</string>
    <string name="template_placement_after">New page after</string>
    <string name="new_notebook_template_library">From this library</string>
    <string name="choose_pdf_background">Choose PDF background</string>
    <plurals name="pdf_has_pages">
        <item quantity="one">PDF has %1$d page</item>
        <item quantity="other">PDF has %1$d pages</item>
    </plurals>
...
